--- a/assete/css/style.css
+++ b/assete/css/style.css
@@ -26,11 +26,11 @@ body {
   --heading-font: 'Poppins', sans-serif;
   --dark-canvas-bg: #00051d;
   --border-color: #eaeaea;
-  --card-border-color: #E1E1E1;
+  --card-border-color: #e1e1e1;
   --black-color: #000000;
   --card-bg: rgba(251, 240, 242, 0.5);
-  --reting-color:#F9C02F;
-  --reting-grea: #C4CDD5;
+  --reting-color: #f9c02f;
+  --reting-grea: #c4cdd5;
 }
 
 img {
@@ -86,6 +86,18 @@ h6 {
   }
   50% {
     transform: translate(150px);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@keyframes movementing {
+  0% {
+    transform: translateX(0);
+  }
+  50% {
+    transform: translateY(150px);
   }
   100% {
     transform: translateX(0);
@@ -353,7 +365,9 @@ h6 {
 }
 
 .btn-primary,
-.btn-trasparent, .btn-white {
+.btn-trasparent,
+.btn-white,
+.btn-sendery {
   padding: 18px 28px;
   border-radius: 50px;
   background-color: var(--primary-color);
@@ -363,16 +377,22 @@ h6 {
   font-family: var(--secondary-font);
   font-weight: 700;
   transition: 0.3s;
+  border: 0;
 }
 
-.btn-white i{
+.btn-sendery {
+  background: var(--dark-canvas-bg);
+  color: var(--text-white);
+  border-radius: 4px;
+  cursor: pointer;
+  outline: 0;
+}
+
+.btn-white i,
+.btn-primary i,
+.btn-sendery i {
   margin-left: 4px;
   transform: rotate(-30deg);
-}
-
-.btn-primary i{
-  margin-left: 4px;
-  transform: rotate(-20deg);
 }
 
 .btn-primary:hover,
@@ -393,12 +413,12 @@ h6 {
   color: var(--text-white);
 }
 
-.btn-white{
+.btn-white {
   background: var(--text-white);
   color: var(--heding-color);
 }
 
-.btn-white:hover{
+.btn-white:hover {
   background: var(--dark-canvas-bg);
   color: var(--text-white);
 }
@@ -717,45 +737,49 @@ h6 {
   margin-top: -100px;
 }
 
-.stroke-gradient-text{
-font-size: 198px;
+.stroke-gradient-text {
+  font-size: 198px;
   font-weight: 900;
   font-family: var(--heading-font);
   line-height: 1em;
   letter-spacing: -0.01em;
-  background: linear-gradient(182deg, #EC092C -66.76%, rgba(236, 9, 44, 0) 32.9%);
+  background: linear-gradient(
+    182deg,
+    #ec092c -66.76%,
+    rgba(236, 9, 44, 0) 32.9%
+  );
   /* background-image: url(../img/banner.jpg); */
   -webkit-background-clip: text;
--webkit-text-fill-color: transparent;
--webkit-text-stroke-width: 2px;
--webkit-text-stroke-color: #EC092C80;
-opacity: 50%;
-text-transform: uppercase;
+  -webkit-text-fill-color: transparent;
+  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-color: #ec092c80;
+  opacity: 50%;
+  text-transform: uppercase;
   opacity: 20%;
 }
 
 .best-selling > h2 {
   text-align: right;
-margin-right: -30px;
+  margin-right: -30px;
 }
 
-.best-selling-top{
+.best-selling-top {
   text-align: center;
 }
 
-.common-title{
+.common-title {
   font-size: 99px;
   font-weight: 900;
   letter-spacing: -0.01em;
   line-height: 118px;
 }
 
-.common-title mark{
+.common-title mark {
   color: var(--primary-color);
   background: transparent;
 }
 
-.filter-nav{
+.filter-nav {
   display: flex;
   gap: 25px;
   justify-content: center;
@@ -763,7 +787,7 @@ margin-right: -30px;
   flex-wrap: wrap;
 }
 
-.filter-nav li a{
+.filter-nav li a {
   padding: 12px 28px;
   display: inline-block;
   text-decoration: none;
@@ -773,19 +797,19 @@ margin-right: -30px;
   font-weight: 500px;
 }
 
-.filter-nav li a.active{
-background-color: var(--primary-color);
-color: var(--text-white);
+.filter-nav li a.active {
+  background-color: var(--primary-color);
+  color: var(--text-white);
 }
 
-.bst-product-row{
+.bst-product-row {
   display: flex;
   gap: 24px;
   margin-top: 64px;
   flex-wrap: wrap;
 }
 
-.product-card.style-2 .product-feature-img{
+.product-card.style-2 .product-feature-img {
   background: var(--card-bg);
   /* max-width: 385px; */
   display: flex;
@@ -793,41 +817,41 @@ color: var(--text-white);
   justify-content: center;
 }
 
-.bst-product-row .product-card{
+.bst-product-row .product-card {
   width: calc(33% - 13px);
   max-width: 100%;
 }
 
-.product-card.style-2{
+.product-card.style-2 {
   padding: 0;
   box-shadow: 0px 1px 2px rgba(145, 158, 171, 0.16);
   border: 0;
   flex-shrink: 0;
 }
 
-.product-card.style-2 .product-card-contant{
+.product-card.style-2 .product-card-contant {
   padding: 32px;
 }
 
-.product-card.style-2 .product-card-contant h4{
+.product-card.style-2 .product-card-contant h4 {
   margin-bottom: 0;
 }
 
-.product-card .product-review-star{
-display: flex;
-font-size: 14px;
-margin-bottom: 16px;
+.product-card .product-review-star {
+  display: flex;
+  font-size: 14px;
+  margin-bottom: 16px;
 }
 
-.product-card .product-review-star li{
+.product-card .product-review-star li {
   color: var(--reting-color);
 }
 
-.product-card .product-review-star.star-4 li:nth-child(5){
-color: var(--reting-grea);
+.product-card .product-review-star.star-4 li:nth-child(5) {
+  color: var(--reting-grea);
 }
 
-.product-card.style-2 .product-action-btn{
+.product-card.style-2 .product-action-btn {
   position: absolute;
   top: 32px;
   right: 10px;
@@ -836,7 +860,7 @@ color: var(--reting-grea);
   gap: 10px;
 }
 
-.product-card.style-2 .product-action-btn button{
+.product-card.style-2 .product-action-btn button {
   width: 48px;
   height: 48px;
   border-radius: 50%;
@@ -847,25 +871,25 @@ color: var(--reting-grea);
   cursor: pointer;
 }
 
-.product-card.style-2 .product-action-btn button svg path{
+.product-card.style-2 .product-action-btn button svg path {
   transition: 0.3s;
 }
 
-.product-card.style-2 .product-action-btn button:hover{
-background: var(--primary-color);
-border-color: var(--primary-color);
-color: var(--text-white);
+.product-card.style-2 .product-action-btn button:hover {
+  background: var(--primary-color);
+  border-color: var(--primary-color);
+  color: var(--text-white);
 }
 
-.product-card.style-2 .product-action-btn button:hover svg path{
+.product-card.style-2 .product-action-btn button:hover svg path {
   fill: var(--text-white);
 }
 
-.view-btn-center{
+.view-btn-center {
   text-align: center;
 }
 
-.view-btn{
+.view-btn {
   font-size: 14px;
   font-weight: 600;
   line-height: 20px;
@@ -878,13 +902,13 @@ color: var(--text-white);
   transition: 0.3s;
 }
 
-.view-btn:hover{
+.view-btn:hover {
   background-color: var(--primary-color);
   color: var(--text-white);
 }
 
 /* wcs-section css */
-.wcs-section{
+.wcs-section {
   overflow: hidden;
   margin-top: 170px;
   padding-bottom: 131px;
@@ -892,8 +916,8 @@ color: var(--text-white);
   z-index: 1;
 }
 
-.wcs-section::before{
-  content: "";
+.wcs-section::before {
+  content: '';
   position: absolute;
   right: 0;
   top: 0;
@@ -903,112 +927,113 @@ color: var(--text-white);
   z-index: -1;
 }
 
-.wcs-bubble-shape{
-position: absolute;
-bottom: 68px;
-left: 10%;
-width: 114px;
-animation: 10s movement infinite;
-z-index: -1;
+.wcs-bubble-shape {
+  position: absolute;
+  bottom: 68px;
+  left: 10%;
+  width: 114px;
+  animation: 10s movement infinite;
+  z-index: -1;
 }
 
-.wcs-section > h2{
+.wcs-section > h2 {
   padding-left: 88px;
   margin-bottom: -36px;
   font-size: 137px;
 }
 
-.wcs-row{
+.wcs-row {
   display: flex;
   gap: 28px;
   align-items: center;
 }
 
-.wcs-contant-left .about-subtitle{
+.wcs-contant-left .about-subtitle {
   font-weight: 900;
 }
 
-.section-title{
-font-weight: 900;
-font-size: 90px;
-line-height: 110px;
-letter-spacing: -0.04em;
+.section-title {
+  font-weight: 900;
+  font-size: 90px;
+  line-height: 110px;
+  letter-spacing: -0.04em;
 }
 
-.wcs-contant-left{
+.wcs-contant-left {
   width: 886px;
   flex-shrink: 0;
 }
 
-.wcs-contant-left > p{
+.wcs-contant-left > p {
   max-width: 760px;
   line-height: 24px;
   margin-top: 32px;
 }
 
-.wcs-fature-row{
+.wcs-fature-row {
   display: flex;
   gap: 24px;
   margin-top: 56px;
 }
 
-.fature-card{
-padding: 32px 24px;
-border: 1px solid var(--card-border-color);
-border-radius: 8px;
-transition: 0.3s;
-background: #ffffff;
+.fature-card {
+  padding: 32px 24px;
+  border: 1px solid var(--card-border-color);
+  border-radius: 8px;
+  transition: 0.3s;
+  background: #ffffff;
 }
 
-.fature-card:hover{
-  box-shadow: 0px 0px 2px rgba(145, 158, 171, 0.3), 12px 12px 24px -4px rgba(145, 158, 171, 0.2);
+.fature-card:hover {
+  box-shadow: 0px 0px 2px rgba(145, 158, 171, 0.3),
+    12px 12px 24px -4px rgba(145, 158, 171, 0.2);
 }
 
-.fature-card h4{
+.fature-card h4 {
   font-size: 18px;
   margin-top: 28px;
 }
 
-.fature-card p{
+.fature-card p {
   margin-top: 16px;
   margin-bottom: 0;
   font-size: 14px;
 }
 
-.wcs-image-right{
+.wcs-image-right {
   flex-shrink: 0;
 }
 
 /* feedback-section css */
-.feedback-section{
+.feedback-section {
   padding: 70px 0;
   position: relative;
   overflow: hidden;
 }
 
-.feedback-section > h2{
+.feedback-section > h2 {
   text-align: right;
   margin-right: -40px;
 }
 
-.feedback-section .quote-icon{
+.feedback-section .quote-icon {
   left: 10%;
   top: 200px;
   position: absolute;
+  animation: 10s movementing infinite;
 }
 
-.feedback-contant{
+.feedback-contant {
   text-align: center;
 }
 
-.feedback-contant h2{
+.feedback-contant h2 {
   font-size: 90px;
   line-height: 110px;
   letter-spacing: -4%;
 }
 
-
-.feedback-single .feedback-comments{
+.feedback-single .feedback-comments {
   font-size: 24px;
   line-height: 32px;
   letter-spacing: -1%;
@@ -1018,47 +1043,48 @@ background: #ffffff;
   font-weight: 500;
 }
 
-.feedback-single .client-name{
+.feedback-single .client-name {
   font-size: 32px;
   line-height: 32px;
-  font-weight: 700; 
+  font-weight: 700;
 }
 
-.feedback-single .product-review{
+.feedback-single .product-review {
   display: flex;
   gap: 4px;
   justify-content: center;
   margin-top: 16px;
 }
 
-.feedback-single .product-review i{
+.feedback-single .product-review i {
   color: var(--reting-color);
 }
 
 /* discount-section css */
-.discount-section > h2{
-margin-left: 30px;
+.discount-section {
+  overflow: hidden;
+  padding-bottom: 130px;
+}
+.discount-section > h2 {
+  margin-left: 30px;
 }
 
-.discount-banner{
-  
-
-}
-
-.box-right{
+.box-right {
   text-align: right;
 }
 
-.discount-banner{
+.discount-banner {
   display: inline-flex;
   align-items: center;
   background-color: var(--primary-color);
   /* max-width: 950px; */
   text-align: left;
   padding-left: 38px;
+  margin-top: -60px;
+  box-sizing: border-box;
 }
 
-.banner-title .about-subtitle{
+.banner-title .about-subtitle {
   color: var(--text-white);
   font-size: 32px;
   line-height: 110px;
@@ -1066,34 +1092,206 @@ margin-left: 30px;
   padding-left: 60px;
 }
 
-.banner-title .about-subtitle::before{
+.banner-title .about-subtitle::before {
   background: var(--text-white);
   bottom: 12px;
   width: 50px;
 }
 
-.banner-title h2{
+.banner-title h2 {
   font-size: 64px;
   line-height: 100pxd;
   color: var(--text-white);
   margin-top: -36px;
 }
 
-.discount-bannaer-contant .btn-white{
+.discount-bannaer-contant .btn-white {
   margin-top: 24px;
 }
 
-.discount-bannaer-contant {
-
+/* footer-section css */
+.footer-section {
+  position: relative;
+  z-index: 1;
+  padding: 100px 0;
+  overflow: hidden;
 }
 
+.footer-buble{
+  position: absolute;
+  right: 30px;
+  top: 0;
+  z-index: -1;
+  width: 100px;
+  animation: 6s movement infinite;
+}
 
+.footer-section::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: calc(50% - 24px);
+  height: 100%;
+  z-index: -1;
+  background: var(--dark-canvas-bg);
+}
 
+.footer-row {
+  display: flex;
+  gap: 32px;
+  justify-content: space-between;
+  align-items: center;
+}
 
+.footer-left {
+  max-width: 600px;
+  width: 50%;
+}
+.footer-left h2 {
+  font-size: 42px;
+  line-height: 54px;
+  color: var(--text-white);
+}
 
+.footer-left p {
+  color: #c2c2c2;
+  margin: 36px 0;
+  line-height: 24px;
+}
 
+.tel-btn .tel-icon {
+  width: 56px;
+  height: 56px;
+  color: var(--text-white);
+  background: var(--primary-color);
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 24px;
+  border-radius: 50%;
+  margin-right: 12px;
+}
 
+.tel-btn {
+  color: var(--text-white);
+  text-decoration: none;
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 56px;
+  display: inline-block;
+}
 
+.footer-newsletter h5 {
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 30px;
+  color: var(--text-white);
+  margin: 32px 0 24px;
+}
 
+.newsletter-form {
+  display: flex;
+  width: 440px;
+}
 
+.newsletter-form input {
+  padding: 18px 17px;
+  background: var(--text-white);
+  width: 100%;
+  border: 0;
+  outline: 0;
+  border-radius: 5px 0 0 5px;
+  color: var(--text-color);
+}
 
+.newsletter-form input::placeholder {
+  color: #323232;
+}
+
+.newsletter-form button {
+  flex-shrink: 0;
+  border-radius: 0 5px 5px 0;
+  cursor: pointer;
+  border: 0;
+}
+
+.newsletter-form button:hover {
+  background: var(--primary-color);
+}
+
+.footer-right {
+  width: 50%;
+}
+
+.footer-right h4 {
+  font-size: 32px;
+  line-height: 44px;
+  font-weight: 800;
+  font-family: var(--secondary-font);
+  margin-bottom: 38px;
+}
+
+.contact-form .input-group {
+  display: flex;
+  gap: 24px;
+}
+
+.contact-form input,
+.contact-form textarea {
+  font-size: 14px;
+  padding: 14px;
+  border: 1px solid rgba(145, 158, 171, 0.32);
+  border-radius: 4px;
+  width: 100%;
+  margin-bottom: 24px;
+  outline: 0;
+  box-sizing: border-box;
+}
+
+.btn-sendery:hover {
+  background: var(--primary-color);
+}
+
+.footer-nav ul {
+  display: flex;
+  gap: 48px;
+}
+
+.footer-nav {
+  margin-top: 64px;
+}
+
+.footer-nav ul li a {
+  text-decoration: none;
+  font-weight: 500;
+  color: var(--text-color);
+  transition: 0.3s;
+  position: relative;
+}
+
+.footer-nav ul li a:hover {
+  color: #ff4d00;
+}
+
+.footer-nav ul li a.active{
+  padding-left: 12px;
+  color: #ff4d00;
+}
+
+.footer-nav ul li a.active::before{
+  opacity: 1;
+}
+
+.footer-nav ul li a::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 7px;
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  background: #ff4d00;
+  transition: 0.3s;
+  opacity: 0;
+}
